--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "@types/node": "20.4.4",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
-    "@types/styled-components": "^5.1.26",
+    "@types/sass": "^1.45.0",
     "eslint": "^8.45.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^6.0.5",
+    "sass": "^1.64.1",
     "typescript": "5.1.6"
   },
   "main": "index.js",
